Added media query for authentication and landing

--- a/Backend/public/stylesheets/auth.css
+++ b/Backend/public/stylesheets/auth.css
@@ -1,3 +1,9 @@
+* {  
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins','Anek Gujarati', sans-serif;
+    box-sizing: border-box;   
+}
 
 body{
     width: 100%;
@@ -10,10 +16,11 @@ body{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: auto;
+    height: 100vh;
     background-size: cover;
-    background-position: center;
+    position: fixed;
+    overflow: hidden;
+    background-position: center center;
     filter: blur(2px);
     z-index: -1;
 }
@@ -36,18 +43,11 @@ body{
 main{
     width: 100%;
     height: 100vh;
-    padding-top: 100px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
-    background: linear-gradient(
-        to right,
-        rgba(0, 0, 0, 0.89) 10%,
-        rgba(0, 0, 0, 0.8) 20%,
-        rgba(0, 0, 0, 0.6) 30%,
-        rgba(0, 0, 0, 0.1) 100%
-    );
+    align-items: center;
+    background: rgba(27, 16, 31, 0.8);
 }
 
 .form-container{
@@ -63,7 +63,7 @@ main{
     border: #262626 1px solid;
     box-shadow: #262626 0px 0px 10px 0px;
     position: relative;
-    top: -40px;
+    /* top: -40px; */
 }
 form{
     display: block;
@@ -231,7 +231,177 @@ p{
     background-color: transparent;
     border: none;
 }
-
 .input-group button:hover {
     color: #aeaeae;
+}
+
+
+/* media-query */
+
+/* Tablet (≤ 1024px or 768px) */
+@media (max-width: 768px)  {
+    body{
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        overflow: hidden;    
+    }
+    .background{
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        background-size: cover;
+        position: fixed;
+        overflow: hidden;
+        background-position: center center;
+        filter: blur(2px);
+        z-index: -1;
+    }
+    .logo{
+        width: 160px;
+        position: absolute;
+        top: 36px;
+        left: 8%;
+        padding: 10px;
+        z-index: 100;
+        background-color: rgba(00, 00, 00,0.4);
+        box-shadow: rgba(00, 00, 00, 1) 0px 0px 50px 0px;
+        border-radius: 24px;
+    }
+    .logo img{
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+    main{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background: rgba(27, 16, 31, 0.8);
+    }
+}
+
+/* Mobile (≤ 768px or 480px) */
+@media (max-width: 480px) {
+    body{
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        overflow: hidden;    
+    }
+    .background{
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        background-size: cover;
+        position: fixed;
+        overflow: hidden;
+        background-position: center center;
+        filter: blur(2px);
+        z-index: -1;
+    }
+    .logo{
+        width: 160px;
+        position: absolute;
+        top: 16px;
+        left: 8%;
+        padding: 10px;
+        z-index: 100;
+        background-color: rgba(00, 00, 00,0.4);
+        box-shadow: rgba(00, 00, 00, 1) 0px 0px 50px 0px;
+        border-radius: 24px;
+    }
+    .logo img{
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+    main{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background: rgba(27, 16, 31, 0.8);
+    }
+    .form-container{
+        width: 300px;
+        height: auto;
+        padding: 16px 24px;
+        border-radius: 12px;
+        display: block;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(24, 20, 25);
+        border: #262626 1px solid;
+        box-shadow: #262626 0px 0px 10px 0px;
+        position: relative;
+        /* top: -40px; */
+    }
+    .form-header{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 24px;
+    }
+    .input-container{
+        width: 100%;
+        height: auto;
+        padding: 0 0px;
+        margin: 8px 0;
+        font-size: 16px;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        gap: 16px;
+        position: relative;
+    }
+    .input-group{
+        position: relative;
+        width: 100%;
+    }
+    label{
+        color: #ffffffb0;
+        position: absolute;
+        top: 8px;
+        left: 16px;
+        transition: 0.3s;
+        font-size: 16px;
+        pointer-events: none;
+    }
+    input:focus{
+        border: #BDF71E 1px solid;
+    }
+    /* FLOATING EFFECT */
+    input:focus + label,
+    input:not(:placeholder-shown) + label {
+        width: fit-content;
+    }
+    .submit-form-btn{
+        margin: 32px 0px 16px 0px;
+        width: 100%;
+        height: 42px;
+        font-size: 16px;
+        border-radius: 25px;
+        background-color: #8d24a7;
+        color: #ffffff;
+        cursor: pointer;
+        border: none;
+        transition: 0.3s;
+    }
+
+    a, p{
+        font-size: 14px;
+    }
 }
