--- a/Backend/views/partials/header-guest.ejs
+++ b/Backend/views/partials/header-guest.ejs
@@ -15,14 +15,15 @@
                     <a href="/auth">Series</a>
                     <a href="/auth">Shows</a>
                 </menu>
+                <i class="fa-solid fa-chevron-down menu-toggle" id="menu-toggle"></i>
             </section>
             <!-- nav-right -->
             <section class="nav-right">
                 <!-- search bar -->
-                <div class="search">
-                    <input id="search-bar" class="search-bar" type="text" placeholder="Search">
-                    <button id="search-btn" class="search-btn" title="Search"><i class="fa-solid fa-magnifying-glass" for="search-bar"></i></button>
-                    <button id="clear-btn" class="clear-btn" title="Clear"><i class="fa-solid fa-xmark"></i></button>
+                <div class="search-bar">
+                    <input id="search-input" class="search-input" name="search-input" type="text" placeholder="Search">
+                    <label id="search-btn" class="search-btn" for="search-input" title="Search"><i class="fa-solid fa-magnifying-glass" for="search-input"></i></label>
+                    <button id="clear-search-btn" class="clear-search-btn" title="Clear"><i class="fa-solid fa-xmark"></i></button>
                 </div>
                 <!-- user icon -->
                  <div class="profile-img">
