--- a/Backend/views/landing.ejs
+++ b/Backend/views/landing.ejs
@@ -6,8 +6,9 @@
   <!-- favicon -->
   <link rel="icon" href="/assets/logo/favicon.png" type="image/x-icon">
   <!-- stylesheet -->
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/header-footer.css">
   <link rel="stylesheet" href="/stylesheets/variables.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/landing.css">
   <!-- scripts -->
   <script defer src="/scripts/main.js"></script>
