--- a/Backend/views/partials/header.ejs
+++ b/Backend/views/partials/header.ejs
@@ -7,14 +7,15 @@
         <section class="nav-left"> 
             <!-- cinecrafter logo -->
             <div class="logo">
-                <a href="/"><img src="/assets/logo/logo.png" alt="logo" ></a>
+                <a href="/home"><img id="header-logo" src="/assets/logo/logo.png" alt="logo" ></a>
             </div>
             <!-- nav menu -->
-            <menu>
+            <menu id="nav-menu">
                 <a href="/movies">Movies</a>
                 <a href="/series">Series</a>
                 <a href="/shows">Shows</a>
             </menu>
+            <i class="fa-solid fa-chevron-down menu-toggle" id="menu-toggle"></i>
         </section>
         <!-- nav-right -->
         <section class="nav-right">
@@ -41,207 +42,19 @@
     </div>
 </div>
 
+<!-- side menu -->
+<div class="side-menu-container" id="side-menu-container" >
+    <div class="side-menu" id="side-menu">
+        <div class="menu-list">
+            <div class="list-item" id="myAccount" onclick="redirectTo('/account.html#myAccount')" >My Account</div>
+            <div class="list-item" id="watchList" onclick="redirectTo('/account.html#watchList')" >Watchlists</div>
+            <div class="list-item" id="bookmarks" onclick="redirectTo('/account.html#bookmarks')" >Bookmarks</div>
+            <div class="list-item" id="Settings" onclick="redirectTo('/account.html#Settings')" >Settings</div>
+            <div class="list-item" id="Help" onclick="redirectTo('/account.html#Help')" >Help</div>
+        </div>
+    </div>
+</div>
 
-<style>
-
-    /* Header */
-    header{
-        width: 100%;
-        height: 80px;
-        background-color: var(--dark-color);
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 48px;
-        position:fixed;
-        top: 0;
-        z-index: 1000;
-    }
-    nav {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    /* nav-left */
-    .nav-left {
-        display: flex;
-        align-items: center;
-        gap: 32px;
-    }
-    .logo img {
-        height: 48px;
-        width: auto;
-    }
-    .nav-left menu{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 24px;
-    }
-    menu a {
-        display: inline;
-        color: #fff;
-        text-decoration: none;
-        font-size: 24px;
-        transition: color 0.3s ease;
-    }
-    menu a:hover {
-        color: var(--accent-color);
-    }
-
-    /* nav-right */
-    .nav-right {
-        display: flex;
-        align-items: center;
-        gap: 32px;
-    }
-    .search-bar{
-        width: 280px;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .search-input{
-        width: 280px;
-        height: 36px;
-        border: 2px solid #555;
-        border-radius: 25px;
-        padding: 8px 10px 6px 16px;
-        background-color: rgba(0, 0, 0, 0);
-        outline: none;
-        font-size: 16px;
-        transition: 0.3s;
-        color: white;
-        position: relative;
-    }
-    .search-bar button, .search-bar label{
-        position: absolute;
-        top: 7px;
-        right: 8px;
-        height: 24px;
-        width: 24px;
-        border: none;
-        background-color: transparent;
-        color: #ffffff;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 20px;
-        transition: 0.3s;
-        border-radius: 50%;
-        font-size: 20px;
-    }
-    .search-bar button{
-        display: none; /* Initially hidden */
-    }
-    .search-input:focus + .search-btn,
-    .search-input:not(:placeholder-shown) + .search-btn{
-        display: none;
-    }
-    .search-input:focus{
-        border: 2px solid var(--accent-color);
-    }
-
-
-    input:-webkit-autofill {
-      background-color: #292929 !important; 
-      color: #ffffff !important;           
-      transition: background-color 5000s ease-in-out 0s; /* Prevent flash */
-      -webkit-box-shadow: 0 0 0px 1000px #292929 inset !important;
-      -webkit-text-fill-color: white !important; /* this line fixes text color */
-    }
-
-
-    .nav-right .profile-img{
-        width: 36px;
-        height: 36px;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .nav-right .fa-circle-user{
-        color: #ffffff;
-        font-size: 36px;
-        cursor: pointer;
-    }
-
-    .nav-right .fa-circle-user:hover{
-        color: var(--accent-color);
-        font-size: 36px;
-    }
-
-    .search-results-container{
-        position: relative;
-        display: none; /* Initially hidden */
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        top: 80px;
-        right: 0px;
-        z-index: 11;
-        background-color: rgba(0, 0, 0, 0.35);
-    }
-    .search-results-container p{
-        position: absolute;
-        left: 20%;
-        padding: 10px;
-        z-index: 12;
-    }
-
-    .result-container{
-        position: absolute;
-        right: 0;
-        max-width: 60%;
-        min-width: 600px;
-        height: 100vh;
-        display: none;
-        /* display: block; */
-        background-color: #000000;
-        z-index: 10;
-    }  
-    .result{
-        margin: 48px 12px 12px 12px;
-        padding: 12px; 
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: start;
-        align-items: flex-start;
-        overflow-y: scroll;
-        gap: 40px 10px;
-
-    }
-
-    .result .movie-card{
-        height: 300px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: start;
-        position: relative;
-    }
-    .movie-card:hover{
-        transform: scale(1.05);
-        transition: 0.3s;
-    }
-    .movie-card .movie-img{
-        height: 300px;
-        width: auto;
-    }
-    .movie-img img{
-        object-fit: cover;
-    }
-    .movie-card .movie-info{
-        text-align: center; margin-top: 5px; display: flex; flex-direction: column; align-items: center; justify-content: start;
-    }
-</style>
 
 
 <script>
@@ -263,7 +76,25 @@
         resultContainer.style.display = 'none';
     });
 
+    const body = document.querySelector('body');
+    const profileImg = document.getElementById('profile-img');
+    const sideMenuContainer = document.getElementById('side-menu-container');
+    const sideMenu = document.getElementById('side-menu');
 
+profileImg.addEventListener('click', (event) => {
+    event.stopPropagation(); // Prevents the document click from firing
+    sideMenuContainer.style.display = 'block';
+});
 
+sideMenu.addEventListener('click', (event) => {
+    event.stopPropagation(); // Prevents closing when clicking inside the menu
+});
+
+document.addEventListener('click', (event) => {
+    // If click is outside the side menu, close it
+    if (sideMenuContainer.style.display === 'block') {
+        sideMenuContainer.style.display = 'none';
+    }
+});
 </script>
 
