--- a/Backend/views/partials/slider.ejs
+++ b/Backend/views/partials/slider.ejs
@@ -8,14 +8,14 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">  
-            <img class="d-block w-100" src="/assets/logo/logo.png" alt="First slide">
+            <img class="d-block w-100" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLC6CQL1HU0Ocm5mz1NEkivmFaN-0hqhaYiA&s" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Slide1</h5>
                 <p>this is slide 1</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="/assets/logo/logo.png" alt="Second slide">
+            <img class="d-block w-100" src="https://keynesdigital.com/wp-content/uploads/2025/04/Over-The-Top-Media-Services.jpeg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Slide2</h5>
                 <p>this is slide 2</p>
@@ -41,11 +41,42 @@
 
 <style>
     .carousel{
-        width: 100%;
-        height: 500px;
+        width: 100vw;
+        height: 32vw;
         position: relative;
-
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+    .carousel-inner{
+        height: 30vw;
+        padding: 0 120px;
+        overflow: hidden;
+    }
+    .carousel-item{
+        width: 100%;
+        position: relative;
+    }
+    .img{
+        width: 80%;
+        height: auto;
+        position: relative;
+    }
+    .carousel-caption{
+        position: absolute;
+        top: 290px;
+    }
+    .carousel-caption h5{
+        font-size: 40px;
+        font-weight: 800;
+        justify-self: flex-start;
+    }
+    .carousel-caption p{
+        font-size: 24px;
+        font-weight: 500;
+        justify-self: flex-start;
+    }
+
     .carousel-indicators{
         display: flex;
         justify-content: center;
