--- a/Backend/views/series.ejs
+++ b/Backend/views/series.ejs
@@ -7,9 +7,10 @@
   <!-- favicon -->
   <link rel="icon" href="/assets/logo/favicon.png" type="image/x-icon">
   <!-- stylesheet -->
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/header-footer.css">
   <link rel="stylesheet" href="/stylesheets/variables.css">
   <link rel="stylesheet" href="/stylesheets/home.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
   <!-- scripts -->
   <script defer src="/scripts/main.js"></script>
   <!-- bootstrap -->
